deleted old unusable photos, added new ones

--- a/website/home.html
+++ b/website/home.html
@@ -146,15 +146,17 @@
         z-index: 3;
     }
     .picture-1{
-        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/mobiledev.jpg")no-repeat center;
+        max-width: 100%;
+        height: auto;
+        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/digital-artist.jpg")no-repeat center;
         background-size: cover;
     }
     .picture-2{
-        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/foodbg.jpg")no-repeat center;
+        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/designui.jpeg")no-repeat center;
         background-size: cover;
     }
     .picture-3{
-        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/restaurantFood.jpg")no-repeat center;
+        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/ui-pop-art.jpg")no-repeat center;
         background-size: cover;
     }
     .body{
