--- a/website/home.html
+++ b/website/home.html
@@ -166,7 +166,7 @@
         background-size: cover;
     }
     .picture-2{
-        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/designui.jpeg")no-repeat center;
+        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/designui.jpg")no-repeat center;
         background-size: cover;
     }
     .picture-3{
@@ -181,7 +181,6 @@
 
 <body>
     <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
-<<<<<<< HEAD
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <!--Pictures-->
         <div class="carousel-inner">
@@ -206,10 +205,8 @@
         </a>
     </div>
     <div class="flex1">
-=======
     <img class="blob2"src="Background.svg"></img>
     <img class="blob3"src="yellow.svg"></img>
->>>>>>> 786324119de9d03ae6ee95870fa76404c99472a4
     <div class="flex">
             <!-- <div class="sampleblob"></div> -->
         <nav id="sidebar">
