--- a/website/home.html
+++ b/website/home.html
@@ -8,6 +8,7 @@
     <script src="jquery/jquery-3.4.1.min.js"></script>
     <!-- Bootstrap CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://kit.fontawesome.com/b0c06c45a8.js"></script>
@@ -19,10 +20,9 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/homelayout.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/carousel-design.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>HomePage</title>
 <style>
     *{
@@ -104,18 +104,16 @@
         z-index: 1;
     }
     .blob2 {
-    position: absolute;
-    right: -253px;
-    bottom: 100px;
-    width: 667px;
+        position: absolute;
+        right: -253px;
+        bottom: 100px;
+        width: 667px;
     }  
     .blob3 {
-
-    position: absolute;
-    left: 379px;
-    bottom: -197px;
-    width: 300px;
-
+        position: absolute;
+        left: 379px;
+        bottom: -197px;
+        width: 300px;
     }
     .sampleblob{
         height:500px;
@@ -134,45 +132,6 @@
         height: 50%;
         position: absolute;
     }
-    .carousel-item>img{
-        width: 100%;
-        height: 358px;
-    }
-    
-    .carousel-control-prev{
-        width: 50px;
-        height: 50px;
-        border: 3px solid transparent;
-        border-radius: 50%;
-        left: 80%;
-        top: 90%;
-        background-color: purple;
-        z-index: 3;
-    }
-    .carousel-control-next{
-        width: 50px;
-        height: 50px;
-        border: 3px solid transparent;
-        border-radius: 50%;
-        right:10%;
-        top: 90%;
-        background-color: purple;
-        z-index: 3;
-    }
-    .picture-1{
-        max-width: 100%;
-        height: auto;
-        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/digital-artist.jpg")no-repeat center;
-        background-size: cover;
-    }
-    .picture-2{
-        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/designui.jpg")no-repeat center;
-        background-size: cover;
-    }
-    .picture-3{
-        background: linear-gradient(transparent 60%, papayawhip 100%),url("photos/ui-pop-art.jpg")no-repeat center;
-        background-size: cover;
-    }
     .body{
         z-index: 2;
     }
@@ -184,25 +143,25 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <!--Pictures-->
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100 picture-1" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 picture-2" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 picture-3" alt="Third slide">
-          </div>
+            <div class="carousel-item active">
+                <img class="d-block w-100 picture-1" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 picture-2" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 picture-3" alt="">
+            </div>
+            <!--Buttons-->
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <!--Buttons-->
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
     </div>
     <div class="flex1">
     <img class="blob2"src="Background.svg"></img>
