--- a/website/home.html
+++ b/website/home.html
@@ -29,7 +29,9 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
+    html{
+        overflow-x: hidden;
+    }
     body {
         font-family: 'Poppins', sans-serif;
         background-color: pink;
