--- a/website/sign up.html
+++ b/website/sign up.html
@@ -8,9 +8,9 @@
         <script src="jquery/jquery-3.4.1.min.js"></script>
         <!-- Bootstrap CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="bootstrap/js/bootstrap.min.js" rel="stylesheet">
         <!-- Fonts -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <!-- Our Custom CSS -->
@@ -23,9 +23,8 @@
         <title>Sign Up</title>
         <style>
             *{
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-family: 'Poppins', sans-serif;
              }
-            @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
         
             body {
                 font-family: 'Poppins', sans-serif;
