--- a/website/home.html
+++ b/website/home.html
@@ -34,7 +34,9 @@
         font-family: 'Poppins', sans-serif;
         background-color: pink;
         margin: 0px;
+        overflow-x: hidden;
     }
+
 
     p {
         font-family: 'Poppins', sans-serif;
@@ -140,6 +142,8 @@
 
 <body>
     <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
+    <img class="blob2"src="Background.svg"></img>
+    <img class="blob3"src="yellow.svg"></img>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <!--Pictures-->
         <div class="carousel-inner">
@@ -164,8 +168,7 @@
         </div>
     </div>
     <div class="flex1">
-    <img class="blob2"src="Background.svg"></img>
-    <img class="blob3"src="yellow.svg"></img>
+
     <div class="flex">
             <!-- <div class="sampleblob"></div> -->
         <nav id="sidebar">
