--- a/website/about/contact.html
+++ b/website/about/contact.html
@@ -47,7 +47,7 @@
 
     html ,body, .flex{
         height: 100%;
-        background-color: #f9f9f9;
+        background-color: papayawhip;
     }
 
     body{
@@ -145,33 +145,31 @@
                 </div>
             </div>
         </div>
-        <div class="body container-fluid"> <!--header or search bar -->
-            <div class=" mt-4">
-                <div class="row justify-content-between">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <button type="button" id="sidebarCollapse" class="btn btn-info">
-                            <i class="fas fa-align-left"></i>
-                        </button>
-                    </nav>
-                    <div id="header-component" class="col-lg-6">
-                        <form action="" class="form">
-                            <div class="form-group">
-                                <i class="fa fa-search" id="search-icon"></i>
-                                <input type="text" 
-                                       class="form-control" 
-                                       name="search" 
-                                       placeholder="Search">
+        <div class="body container-fluid"> <!--.Header-->
+            <div class="container header">
+                <div class="row">
+                    <!-- Collapsible content -->
+                    <div class="col-8">
+                
+                        <!-- Search form -->
+                        <form class="form-inline mr-auto">
+                            <div class="md-form my-0 header-search">
+                                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                                <button type="submit"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
                             </div>
                         </form>
+                    
                     </div>
-                    <div id="header-component" class="col-lg-6">
-                        <div id="profile">
-                            <h5 class="pt-2"> FirstName LastName </h5> &nbsp; &nbsp;
-                            <img src="../photos/avatar.png" >
-                        </div>
+                    <!-- Collapsible content -->
+                    <div class="col-4  header-login">
+                        <!-- Navbar brand -->
+                        <button class="navbar-brand" onclick="fadein()">Login</button>
+                        <button class="navbar-brand"><a href="sign up.html">Sign Up</a></button>
                     </div>
                 </div>
             </div>
+            <!--/.Header-->
+
             <hr class="bg-info mt-6">
             <div class="mainbody1">
                 <div class="section1" id="section1-1">
@@ -185,10 +183,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <script src="../js/login.js"></script>
-</body>
-<!-- Footer -->
+        <!-- Footer -->
 <footer class="foot-style">
 
         <!-- Footer Elements -->
@@ -243,4 +238,8 @@
         <script src="../js/footer.js"></script>
     </footer>
     <!-- Footer -->
+
+    </div>
+    <script src="../js/login.js"></script>
+</body>
 </html>
