fixed carousel not moving

--- a/website/home.html
+++ b/website/home.html
@@ -8,6 +8,7 @@
     <script src="jquery/jquery-3.4.1.min.js"></script>
     <!-- Bootstrap CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -96,12 +97,14 @@
         right: -253px;
         bottom: 100px;
         width: 667px;
+        z-index: 1;
     }  
     .blob3 {
         position: absolute;
         left: 379px;
         bottom: -197px;
         width: 300px;
+        z-index: 1;
     }
     .sampleblob{
         height:500px;
