--- a/website/home.html
+++ b/website/home.html
@@ -97,6 +97,7 @@
         right: -253px;
         bottom: 100px;
         width: 667px;
+        opacity: 0.5;
         z-index: 1;
     }  
     .blob3 {
@@ -133,6 +134,7 @@
     <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
     <img class="blob2"src="Background.svg"></img>
     <img class="blob3"src="yellow.svg"></img>
+    
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <!--Pictures-->
         <div class="carousel-inner">
