--- a/website/home.html
+++ b/website/home.html
@@ -135,7 +135,7 @@
         color: black;
     }
     #trending{
-        background-color: purple;
+        background-color: rgb(190, 17, 176);
         color: white;
         border-radius: 46%;
         padding: 3px;
@@ -153,6 +153,7 @@
     }
     .word-container{
         height: 45px;
+        margin-bottom: 26px;
     }
     hr{
     border: 0;
@@ -168,6 +169,7 @@
     margin-right: 15px;
     margin-bottom: 18px;
     margin-left: 15px;
+    box-shadow: 10px 5px 5px rgba(215, 215, 193);
     }
     #row2{
         height:20px;
@@ -187,7 +189,27 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: .5rem;
-}
+    }
+    .card-title,.card-text{
+        text-align:left;
+    }
+    button.material-icons{
+        border:none;
+        background: transparent;
+        font-size: 30px;
+        color:#212529;
+    }
+    button.material-icons:focus{
+        color: red;
+    }
+    #brush{
+        background-color: greenyellow;
+        color: white;
+        border-radius: 46%;
+        padding: 3px;
+        font-size: 36px;
+        margin: 10px;
+    }
 </style>
 </head>
 
@@ -318,29 +340,41 @@
                                 <div id="card1" class="card bg-light">
                                         <img class="card-img-top" src="photos/designui.jpg" alt="Card image cap">
                                   <div class="card-body text-center">
-                                    <p class="card-text">Some more text to increase the height</p>
-                                    <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+                                        <h4 class="card-title">Starry Night</h4>
+                                    <p class="card-text">Vincent Van Gogh</p>
+                                    <button class="material-icons" href="#">favorite_border</button>
+                                    <button class="material-icons" href="#">chat_bubble_outline</button>
+                                    <button class="material-icons" href="#">turned_in_not</button>
                                   </div>
                                 </div>
                                 <div class="card bg-light">
                                         <img class="card-img-top" src="photos/ui-pop-art.jpg" alt="Card image cap">
                                   <div class="card-body text-center">
-                                    <p class="card-text">Some text inside the second card</p>
-                                    <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+                                        <h4 class="card-title">John Doe</h4>
+                                        <p class="card-text">Vincent Van Gogh</p>
+                                    <button class="material-icons" href="#">favorite_border</button>
+                                    <button class="material-icons" href="#">chat_bubble_outline</button>
+                                    <button class="material-icons" href="#">turned_in_not</button>
                                   </div>
                                 </div>
                                 <div class="card bg-light">
                                         <img class="card-img-top" src="photos/designui.jpg" alt="Card image cap">
                                   <div class="card-body text-center">
-                                    <p class="card-text">Some text inside the third card</p>
-                                    <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+                                        <h4 class="card-title">John Doe</h4>
+                                        <p class="card-text">Vincent Van Gogh</p>
+                                    <button class="material-icons" href="#">favorite_border</button>
+                                    <button class="material-icons" href="#">chat_bubble_outline</button>
+                                    <button class="material-icons" href="#">turned_in_not</button>
                                   </div>
                                 </div>
                                 <div class="card bg-light">
                                         <img class="card-img-top" src="photos/ui-pop-art.jpg" alt="Card image cap">
                                   <div class="card-body text-center">
-                                    <p class="card-text">Some text inside the fourth card</p>
-                                    <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
+                                        <h4 class="card-title">John Doe</h4>
+                                        <p class="card-text">Vincent Van Gogh</p>
+                                    <button class="material-icons" href="#">favorite_border</button>
+                                    <button class="material-icons" href="#">chat_bubble_outline</button>
+                                    <button class="material-icons" href="#">turned_in_not</button>
                                   </div>
                                 </div>  
                               </div>
@@ -348,7 +382,62 @@
                                     <div class="card bg-light">
                                             <img class="card-img-top" src="photos/designui.jpg" alt="Card image cap">
                                       <div class="card-body text-center">
-                                        <p class="card-text">Some text inside the first card</p>
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">Vincent Van Gogh</p>
+                                        <button class="material-icons" href="#">favorite_border</button>
+                                        <button class="material-icons" href="#">chat_bubble_outline</button>
+                                        <button class="material-icons" href="#">turned_in_not</button>
+                                      </div>
+                                    </div>
+                                    <div class="card bg-light">
+                                            <img class="card-img-top" src="photos/ui-pop-art.jpg" alt="Card image cap">
+                                      <div class="card-body text-center">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">Vincent Van Gogh</p>
+                                        <button class="material-icons" href="#">favorite_border</button>
+                                        <button class="material-icons" href="#">chat_bubble_outline</button>
+                                        <button class="material-icons" href="#">turned_in_not</button>
+                                      </div>
+                                    </div>
+                                    <div class="card bg-light">
+                                            <img class="card-img-top" src="photos/designui.jpg" alt="Card image cap">
+                                      <div class="card-body text-center">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">Vincent Van Gogh</p>
+                                        <button class="material-icons" href="#">favorite_border</button>
+                                        <button class="material-icons" href="#">chat_bubble_outline</button>
+                                        <button class="material-icons" href="#">turned_in_not</button>
+                                      </div>
+                                    </div>
+                                    <div class="card bg-light">
+                                            <img class="card-img-top" src="photos/ui-pop-art.jpg" alt="Card image cap">
+                                      <div class="card-body text-center">
+                                            <h4 class="card-title">John Doe</h4>
+                                            <p class="card-text">Vincent Van Gogh</p>
+                                        <button class="material-icons" href="#">favorite_border</button>
+                                        <button class="material-icons" href="#">chat_bubble_outline</button>
+                                        <button class="material-icons" href="#">turned_in_not</button>
+                                      </div>
+                                    </div>  
+                                  </div>
+                        <div id="row2" class="row">
+                         <button id="see-more" >See More</button>
+                              </div>
+                              <hr>
+
+                              <div class="word-container">
+                                <div id="row1" class="row">
+                                        <div  class="col-0.5"> <i id="brush" class="material-icons" href="#">brush</i> </div>
+                                        <div  id="column" class="col-11.5"><p class="text-title">Today's Featured Artists</p></div>
+                            
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="card-deck">
+                                    <div id="card1" class="card bg-light">
+                                            <img class="card-img-top" src="photos/designui.jpg" alt="Card image cap">
+                                      <div class="card-body text-center">
+                                        <p class="card-text">Some more text to increase the height</p>
                                         <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
                                       </div>
                                     </div>
@@ -366,23 +455,16 @@
                                         <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
                                       </div>
                                     </div>
-                                    <div class="card bg-light">
-                                            <img class="card-img-top" src="photos/ui-pop-art.jpg" alt="Card image cap">
-                                      <div class="card-body text-center">
-                                        <p class="card-text">Some text inside the fourth card</p>
-                                        <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
-                                      </div>
-                                    </div>  
                                   </div>
                         <div id="row2" class="row">
-                         <button id="see-more" >See More</div>
+                         <button id="see-more" >See More</button>
                               </div>
                                 </div>
-                <div id="row1" class="row">
+                <!-- <div id="row1" class="row">
                     <div  class="col-sm-4">.col-sm-4</div> 
                     <div  class="col-sm-4">.col-sm-4</div>
                     <div  class="col-sm-4">.col-sm-4</div>
-                </div>
+                </div> -->
             </div>
 
         </div>
