--- a/website/home.html
+++ b/website/home.html
@@ -568,12 +568,18 @@ body {
     width:100%;
 }
 
+.username{
+    font-size:25px;
+    margin-bottom: 0;
+    color:white;
+}
+
 </style>
 </head>
 
 <body>
     <img id="blob1"class="img-responsive"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
-    <img id="blob2" class="img-responsive"src="Background.svg"></img>
+    <!-- <img id="blob2" class="img-responsive"src="Background.svg"></img> -->
     <img id="blob3" class="img-responsive"src="yellow.svg"></img>
     
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -893,10 +899,11 @@ body {
                                         </div>
                                         <div class="user">
                                           <div class="socials">
-                                            <div class="social"><i class="zmdi zmdi-twitter"></i></div>
+                                              <p class="username">J-Hope</p>
+                                            <!-- <div class="social"><i class="zmdi zmdi-twitter"></i></div>
                                             <div class="social"><i class="zmdi zmdi-github"></i></div>
                                             <div class="social"><i class="zmdi zmdi-google-plus"></i></div>
-                                            <div class="social"><i class="zmdi zmdi-codepen"></i></div>
+                                            <div class="social"><i class="zmdi zmdi-codepen"></i></div> -->
                                           </div>
                                           <div class="profiles">
                                             <div class="profile"><span>51</span>Upvoted</div>
@@ -966,10 +973,11 @@ body {
                                         </div>
                                         <div class="user">
                                           <div class="socials">
-                                            <div class="social"><i class="zmdi zmdi-twitter"></i></div>
+                                              <p class="username">Jungkook</p>
+                                            <!-- <div class="social"><i class="zmdi zmdi-twitter"></i></div>
                                             <div class="social"><i class="zmdi zmdi-github"></i></div>
                                             <div class="social"><i class="zmdi zmdi-google-plus"></i></div>
-                                            <div class="social"><i class="zmdi zmdi-codepen"></i></div>
+                                            <div class="social"><i class="zmdi zmdi-codepen"></i></div> -->
                                           </div>
                                           <div class="profiles">
                                             <div class="profile"><span>51</span>Upvoted</div>
@@ -1039,10 +1047,11 @@ body {
                                         </div>
                                         <div class="user">
                                           <div class="socials">
-                                            <div class="social"><i class="zmdi zmdi-twitter"></i></div>
+                                              <p class="username">RM</p>
+                                            <!-- <div class="social"><i class="zmdi zmdi-twitter"></i></div>
                                             <div class="social"><i class="zmdi zmdi-github"></i></div>
                                             <div class="social"><i class="zmdi zmdi-google-plus"></i></div>
-                                            <div class="social"><i class="zmdi zmdi-codepen"></i></div>
+                                            <div class="social"><i class="zmdi zmdi-codepen"></i></div> -->
                                           </div>
                                           <div class="profiles">
                                             <div class="profile"><span>51</span>Upvoted</div>
