added about us page

--- a/website/about/contact.html
+++ b/website/about/contact.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/contactlayout.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <title>About Us</title>
+    <title>Contact Us</title>
 <style>
     *{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
