--- a/website/home.html
+++ b/website/home.html
@@ -222,7 +222,11 @@
         text-align: center;
     }
 
-
+    @media(max-width: 768px) and (min-width: 540px) {
+      .container-fluid{
+        margin-left: 75px;
+      }
+    }
 
 
     @import url(https://zavoloklom.github.io/material-design-iconic-font/css/docs.md-iconic-font.min.css);
