--- a/website/home.html
+++ b/website/home.html
@@ -310,8 +310,8 @@
                         
                     </b>
                     <div class="login-container" style="text-align: center">
-                        <a id="forgot-pass" href="javascript:void(0);">Forgot Password?</a>
-                        <br>Don't have an account? <br> <a id="forgot-pass" href="sign up.html">Sign Up</a>
+                        <a id="forgot-pass" href="javascript:void(0);" style="color:black">Forgot Password?</a>
+                        <br>Don't have an account? <br> <a id="forgot-pass" href="sign up.html" style="color:black">Sign Up</a>
                     </div>
                 </div>
                 <div class="forgot-password">
@@ -333,8 +333,8 @@
                                     class="btn btn-block btn-info btn-login">
                                     Send Code via Email
                             </button>
-                            <br><br><a id="backtoLogin" href="javascript:void(0);">Back to Login</a>
-                            <br>Don't have an account? <br> <a href="sign up.html">Sign Up</a>
+                            <br><br><a id="backtoLogin" href="javascript:void(0);" style="color:black">Back to Login</a>
+                            <br>Don't have an account? <br> <a href="sign up.html" style="color:black">Sign Up</a>
                         </div>
                     </div>
                 </div>
