margin for see more

--- a/website/home.html
+++ b/website/home.html
@@ -186,6 +186,7 @@
         color: white;
         border:none;
         border-radius: 4%;
+        margin-bottom: 30px;
     }
     .card:hover{
         background-color: pink;
