reduced card margin

--- a/website/home.html
+++ b/website/home.html
@@ -267,6 +267,9 @@
     border-top-right-radius: calc(.25rem - 1px);
     height: 100%;
 }
+    .bg-light{
+      margin-left: 2px;
+    }
     }
 
     @import url(https://zavoloklom.github.io/material-design-iconic-font/css/docs.md-iconic-font.min.css);
